# genai-blog-generation

./: .gitignore  ARCHITECTURE.md  K3D_DEVELOPMENT.md  MIGRATION.md  README.md  docker-compose.yml  request.json  requirements.txt  setup-local-k3d.sh  teardown-k3d.sh
.github/: SECRETS_SETUP.md
.github/workflows/: ci-cd.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schemas.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/common/: logger.py
backend/app/database/: chromadb.py  mongodb.py
backend/app/graphs/: graph_builder.py
backend/app/llms/: groqllm.py
backend/app/models/: blog.py  document.py  session.py  user.py
backend/app/nodes/: blog_node.py
backend/app/routers/: auth.py  blogs.py  chat.py  documents.py  health.py  news.py
backend/app/schemas/: auth.py  blog.py  document.py
backend/app/services/: document_service.py  export_service.py  graph_service.py  llm_factory.py  llm_service.py  session_service.py
backend/tests/: test_api.py  test_graph.py  test_nodes.py
docs/: DEPLOYMENT_GUIDE.md  PROJECT_OVERVIEW.md
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
infra/: README.md
infra/docker/: backend.Dockerfile  frontend-simple.Dockerfile  frontend.Dockerfile
infra/k3s/: README.md  deploy.ps1  deploy.sh
infra/scripts/: setup-local-k3d.sh  verify-setup.sh
src/common/: logger.py
src/ui/: BlogUi.py  uiconfigfile.ini  (+1 more)
(+55 files in other folders)
